2016-11-04	Yes, it still compiles!  ;-)

		GNUmakefile :
		- now dumps smaller portions of compiled test binaries (again)

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/omg.h :
		- upped default scrambling levels (again)

		include/innocent-pear/rofl.h :
		- upped default scrambling levels
		- now uses `no_cfi' attribute on rofl_impl_syscall<...>::
		  syscall_raw(...) for ARM

		share/innocent-pear/doge-01.cc :
		- split huge function into 3 parts
		- explicitly specified fewer scrambling levels for a few calls

		share/innocent-pear/doge-07.cc :
		- explicitly specified fewer scrambling levels for pretty much
		  all calls

		share/innocent-pear/doge-i.h :
		- reduced the amount of chaff from innocent_pear_CHAFF(.)

		doc/20161104-test-doge-abs-reloc-armv7-a.png :
		- new

		README.md :
		- changed illustration

2016-11-03	A bit less resource wastage at compile time.  A bit more
		branching at run time.

		bin/innocent-pear-front-end.tcc :
		- now closes temporary */calm file descriptor if running
		  C(++) compiler as child process
		- reduced memory leakage for child process parameters

		include/innocent-pear/omg.h :
		- added possibility of choosing between two omg<...>::omg(.)'s

		share/innocent-pear/sleepier.cc :
		- now correctly processes the return value of mkstemp(.) :-\

2016-11-02	"A list is only as strong as its weakest link."  (5)

		include/innocent-pear/tfw.h :
		- new

		include/innocent-pear/omg.h :
		- added possibility that indirect jumps may _not_ be taken,
		  with the help of tfw.h
		- added possibility of choosing between two omg<...>'s
		- redistributed probabilities

		GNUmakefile :
		- added include/innocent-pear/tfw.h as a dependency

2016-10-30	"A list is only as strong as its weakest link."  (4)

		include/innocent-pear/kthxbai.h :
		- more surprise in the basis case

		include/innocent-pear/bbq.h :
		- moved x86 macros in from omg.h, renamed, and fixed bugs

		include/innocent-pear/omg.h :