@@ -88,8 +88,6 @@ innocent_pear_DOGE unscramble_06_1()
 	innocent_pear::orly<innocent_pear_DOGE_STATE_9,
 	    unsigned char, false, true, flags>().wut(nxs, nxe);
 	innocent_pear_CHAFF(flags);
-	innocent_pear::rofl?<flags>::clear_cache(nxs, nxe);
-	innocent_pear_CHAFF(flags);
 	dogecoin_t dogecoin;
 	innocent_pear::orly<innocent_pear_DOGE_STATE_10,
 	    unsigned char, false, false, flags>().wot(dogecoin_start,
@@ -97,7 +95,16 @@ innocent_pear_DOGE unscramble_06_1()
 	innocent_pear_CHAFF(flags);
 }
 
-innocent_pear_DOGE_MEMSET unscramble_06_2()
+innocent_pear_DOGE unscramble_06_2()
+	constexpr ops_flags_t flags =
+	    (ops_flags_t)(allow_for_startup | under_munged_terminal);
+	unsigned char *nxs = next_start, *nxe = next_end;
+	innocent_pear_CHAFF(flags);
+	innocent_pear::rofl?<flags>::clear_cache(nxs, nxe);
+	innocent_pear_CHAFF(flags);
+}
+
+innocent_pear_DOGE_MEMSET unscramble_06_3()
 {
 	constexpr ops_flags_t flags =
 	    (ops_flags_t)(allow_for_startup | under_munged_terminal);
